board/orangepi/orangepi-zero/kernel-legacy/rootfs_overlay/etc/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Sat Sep 23 13:44:29 2017
*filter
:INPUT ACCEPT [1368:330131]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2119:372798]
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i br0 -o tun+ -j ACCEPT
-A FORWARD -i br0 -o ppp+ -j ACCEPT
-A FORWARD -i br0 -o vpn_vpn+ -j ACCEPT
COMMIT
# Completed on Sat Sep 23 13:44:29 2017
# Generated by iptables-save v1.6.0 on Sat Sep 23 13:44:29 2017
*nat
:PREROUTING ACCEPT [7:1855]
:INPUT ACCEPT [1:161]
:OUTPUT ACCEPT [96:6828]
:POSTROUTING ACCEPT [2:134]
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o tun+ -j MASQUERADE
-A POSTROUTING -o ppp+ -j MASQUERADE
-A POSTROUTING -o vpn_vpn+ -j MASQUERADE
COMMIT
# Completed on Sat Sep 23 13:44:29 2017
